[gd_scene load_steps=3 format=2]

[ext_resource path="res://Tunnel.gd" type="Script" id=1]
[ext_resource path="res://models/tunnel/tunnel.tscn" type="PackedScene" id=2]

[node name="Tunnel" type="Spatial"]
script = ExtResource( 1 )

[node name="Segment1" parent="." instance=ExtResource( 2 )]

[node name="Segment2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -50, 0 )

[node name="Segment3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -100, 0 )

[node name="Segment4" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -150, 0 )
